--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@commitlint/config-conventional": "^19.8.0",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/gsap": "^3.0.0",
     "@types/he": "^1.2.3",
     "@types/node": "^20.17.32",
     "@types/react": "^19.1.2",
